--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                     <h3 class="display-6 py-3">Expenses</h3>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Food: </h4> &nbsp;
-                        <input type="number" name="" id="food" value="20000">
+                        <input type="number" name="" id="food" value="">
                     </div>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Rent: </h4> &nbsp;
-                        <input type="number" name="" id="rent" value="20000">
+                        <input type="number" name="" id="rent" value="">
                     </div>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Others: </h4> &nbsp;
-                        <input type="number" name="" id="others" value="20000">
+                        <input type="number" name="" id="others" value="">
                     </div>
 
                     <button id="calculate" class="btn btn-success my-3 px-5">Calculate</button>
@@ -52,24 +52,24 @@
 
                     <div class="py-1 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Balance: </h4> &nbsp;
-                        <h4 id="totalExpenses" class="display-6-font-weight-bold">4500</h4>
+                        <h4 id="balance" class="display-6-font-weight-bold">4500</h4>
                     </div>
 
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Save: </h4> &nbsp;
-                        <input style="width: 70px;" type="number" name="" id="save" value="20">  &nbsp;
+                        <input style="width: 70px;" type="number" name="" id="saveInput" value="20">  &nbsp;
                         <h4 class="font-weight-bold"> % </h4> &nbsp;
-                        <button id="calculate" class="btn btn-success px-4 ">Save</button>
+                        <button id="saveBtn" class="btn btn-success px-4 ">Save</button>
                     </div>
 
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Saving Amount: </h4> &nbsp;
-                        <h4 id="totalExpenses" class="display-6-font-weight-bold">2000</h4>
+                        <h4 id="savingAmount" class="display-6-font-weight-bold">2000</h4>
                     </div>
 
                     <div class="py-2 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Remaining Amount: </h4> &nbsp;
-                        <h4 id="totalExpenses" class="display-6-font-weight-bold">2500</h4>
+                        <h4 id="remainingAmount" class="display-6-font-weight-bold">2500</h4>
                     </div>
                 </div>
             </div>
