--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                         <h4 class="font-weight-bold">Total Expenses: </h4> &nbsp;
                         <h4 id="totalExpenses" class="display-6-font-weight-bold">000</h4>
                     </div>
+                    <div class="notify-section">
+                        <p style="display: none;" id="failedVD" class="notify text-danger">❌ You Want More Money For Expense !</p>
+                    </div>
 
                     <div class="py-1 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Balance: </h4> &nbsp;
@@ -81,6 +84,9 @@
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Saving Amount: </h4> &nbsp;
                         <h4 id="savingAmount" class="display-6-font-weight-bold">000</h4>
+                    </div>
+                    <div class="notify-section">
+                        <p style="display: none;" id="failedSA" class="notify text-danger">❌ You Don't Have Enough Money For Savings !</p>
                     </div>
 
                     <div class="py-2 d-flex justify-content-center align-items-center">
