--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Monthly Bank</title>
-    <link rel="shortcut icon" href="images/bank-logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/bitcoin-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/all.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
 
     <header class="bg-white p-5">
-        <h1 class="display-4 text-success font-weight-bold">My Monthly Bank</h1>
+        <h1 class="display-4 text-success text-center font-weight-bold">My Monthly Bank <span class="text-danger"><i class="fab fa-bitcoin"></i></span></h1>
     </header>
 
     <main class="">
         <div class="container">
             <div class="row d-flex justify-content-between">
-                <div class="col-12 col-md-12 col-lg-6 m-2">
+                <div class="col-12 col-md-12 col-lg-6 my-1">
                     <div class="">
-                        <img src="images/bank-logo.jpg" alt="Bank" class="img-flluid rounded">
+                        <img src="images/bank-logo.jpg" alt="Bank" class="img-fluid rounded">
                     </div>
                 </div>
-                <div class="col-12 col-md-12 col-lg-5 m-2 bg-light text-center">
+                <div class="col-12 col-md-12 col-lg-6 bg-light text-center my-1">
                     <h3 class="display-6 py-3">Income</h3>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Income: </h4> &nbsp;
