--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="display-4 text-success text-center font-weight-bold">My Monthly Bank <span class="text-danger"><i class="fab fa-bitcoin"></i></span></h1>
     </header>
 
-    <main class="">
+    <main class="py-5">
         <div class="container">
             <div class="row d-flex justify-content-between">
                 <div class="col-12 col-md-12 col-lg-6 my-1">
