--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h3 class="display-6 py-3">Income</h3>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Income: </h4> &nbsp;
-                        <input style="background-color: #ddd; border: none;" type="number" name="" id="income" value="">
+                        <input style="background-color: #ddd; border: none;" placeholder="000" type="number" name="" id="income" value="">
                     </div>
                     <div class="notify-section">
                         <p style="display: none;" id="failedI" class="notify text-danger">❌ Please Enter Your Monthly Income !</p>
@@ -37,7 +37,7 @@
                     <h3 class="display-6 py-3">Expenses</h3>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Food: </h4> &nbsp;
-                        <input type="number" name="" id="food" value="">
+                        <input type="number" name="" placeholder="000" id="food" value="">
                     </div>
                     <div class="notify-section">
                         <p style="display: none;" id="failedF" class="notify text-danger">❌ Please Enter Your Monthly Food Cost !</p>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Rent: </h4> &nbsp;
-                        <input type="number" name="" id="rent" value="">
+                        <input type="number" name="" placeholder="000" id="rent" value="">
                     </div>
                     <div class="notify-section">
                         <p style="display: none;" id="failedR" class="notify text-danger">❌ Please Enter Your Monthly Rent Cost !</p>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Others: </h4> &nbsp;
-                        <input type="number" name="" id="others" value="">
+                        <input type="number" name="" placeholder="000" id="others" value="">
                     </div>
                     <div class="notify-section">
                         <p style="display: none;" id="failedO" class="notify text-danger">❌ Please Enter Your Monthly Others Cost !</p>
@@ -77,7 +77,7 @@
 
                     <div class="py-3 d-flex justify-content-center align-items-center">
                         <h4 class="font-weight-bold">Save: </h4> &nbsp;
-                        <input style="width: 70px;" type="number" name="" id="saveInput" value="20">  &nbsp;
+                        <input style="width: 70px;" type="number" placeholder="000" name="" id="saveInput" value="20">  &nbsp;
                         <h4 class="font-weight-bold"> % </h4> &nbsp;
                         <button id="saveBtn" class="btn btn-success px-4 ">Save</button>
                     </div>
